--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Jeremy Wohl</title>
+    <title>Rewind: A Coding Project By Jeremy Wohl</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -39,7 +39,7 @@
                 <!-- Nav Items -->
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item ms-3">
-                        <a class="nav-link active" aria-current="page" href="/index.html">App Name: The Challenge</a>
+                        <a class="nav-link active" aria-current="page" href="/index.html">Rewind: The Challenge</a>
                     </li>
                     <li class="nav-item ms-3"><a class="nav-link" href="/solution.html">My Solution</a></li>
                     <li class="nav-item ms-3"><a class="nav-link" href="/code.html">My Code</a></li>
@@ -58,9 +58,8 @@
 
                 <!-- App Description -->
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
-                    <h4 class="lead">Live life one loop at a time. A JavaScript coding exercise using loops. Write a program that displays
-                        the numbers from 0 to 100. Display even numbers in bold.</h4>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Rewind: A Coding Project</h1>
+                    <h4 class="lead">Write a program that takes a string in from the user and then displays it in reverse.</h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>HTML/CSS & Bootstrap Layout</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Fundamentals</li>
@@ -91,7 +90,7 @@
                 <!-- App Image -->
                 <div class="col">
                     <div class="d-flex justify-content-center">
-                        <img src="/img/speedometer.webp" class="img-fluid center-block d-block" alt="App Logo">
+                        <img src="/img/rewind.gif" class="img-fluid center-block d-block" alt="App Logo">
                     </div>       
                 </div>
 
